--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
+    "react-slugify": "^5.0.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.16"
   },
